--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,11 +14,12 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "33.0.1"
+    buildToolsVersion "33.0.0"
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 33
+        minSdkVersion 23
+        compileSdkVersion = 33
+        targetSdkVersion = 33
         versionCode 1
         versionName "1.0"
     }
@@ -34,7 +35,7 @@ repositories {
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.google.android.gms:play-services-wallet:19.1.0'
+    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
 }
   
